--- a/TwitterApp/templates/Followers.html
+++ b/TwitterApp/templates/Followers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Search</title>
+    <title>Followers</title>
 
 
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -9,7 +9,7 @@
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="../static/tweets.css" rel="stylesheet">
     <script src="../static/js/jquery-3.1.1.min.js"></script>
-    <script src="../static/js/Tweets.js"></script>
+    <script src="../static/js/followers.js"></script>
   </head>
 
   <body>
@@ -19,23 +19,23 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" ><a href="/">Search</a></li>
-            <li role="presentation" class="active"><a href="#">User Tweets</a></li>
-            <li role="presentation"><a href="/user_followers">Followers</a></li>
+            <li role="presentation" ><a href="/tweets">User Tweets</a></li>
+            <li role="presentation" class="active"><a href="#">Followers</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Python Twitter App</h3>
       </div>
 
       <div class="jumbotron">
-        <h1>Tweets</h1>
-        <form class="form-tweets">
+        <h1>Followers</h1>
+        <form class="form-followers">
             <label for="screenName" class="sr-only">Screen Name</label>
             <input type="screen_name" name="screenName" id="screenName" class="form-control" placeholder="Screen Name" required autofocus>
-            <button id="submit" class="btn btn-lg btn-primary btn-block" type="button">Get Tweets</button>
+            <button id="submit" class="btn btn-lg btn-primary btn-block" type="button">Get Followers</button>
         </form>
       </div>
-      <div class="tweets">
-        <p id="tweets"></p>
+      <div class="followers">
+        <p id="followers"></p>
       </div>
 
 
