--- a/TwitterApp/templates/Search.html
+++ b/TwitterApp/templates/Search.html
@@ -19,8 +19,8 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="#">Search</a></li>
-            <li role="presentation"><a href="#">User Tweets</a></li>
-            <li role="presentation"><a href="#">Follower</a></li>
+            <li role="presentation"><a href="/tweets">User Tweets</a></li>
+            <li role="presentation"><a href="/user_followers">Followers</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Python Twitter App</h3>
@@ -37,7 +37,7 @@
         </form>
       </div>
       <div class="searches">
-          <p id="sr"></p>
+          <p id="searchresult"></p>
 
 
 
